# sdl_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  constants.h  icicle.c  icicle.h  install.sh  main.c  map.c  map.h  player.c  player.h
src/: camera.c  camera.h  collision.c  collision.h  constants.h  entity.c  entity.h  icicle.c  icicle.h  item.h  keys.c  keys.h  main.c  map.c  map.h  platform.c  platform.h  player.c  player.h  potions.c  potions.h  projectile.c  projectile.h  text.c  text.h  texture_manager.c  texture_manager.h  utils.c  utils.h
src/enemies/: iceman.c  iceman.h
